--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -17,3 +17,8 @@ PyJWT==2.1.0
 pytz==2020.1
 sqlparse==0.3.1 
 python-dotenv==0.21.0
+flake8==5.0.4
+flake8-broken-line==0.6.0
+flake8-isort==6.0.0
+flake8-plugin-utils==1.3.2
+flake8-return==1.2.0
