--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -40,6 +40,7 @@ jobs:
           with:
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REP_NAME }}
+            file: api_yamdb/Dockerfile
   
   deploy:
     runs-on: ubuntu-latest
