--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - ./.env
   web:
     image: yurydenorth/sprint16_p:1
-    build: ../api_yamdb
+    build: ./api_yamdb
     restart: always
     volumes:
       - static_value:/app/static/
