--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.7-slim
 
 WORKDIR /app
 
-COPY ./requirements.txt .
+COPY ../api_yamdb/requirements.txt .
+# COPY ./requirements.txt . так работало до этого
 
 RUN pip3 install -r ./requirements.txt --no-cache-dir
 
